# FinWise

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/data/: Company Tracker - Job  - Sheet1.csv
app/services/: budget_ai.py
app/utils/: file_handler.py  utils.py
