[project]
name = "finwise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.4",
    "langchain-openai>=0.3.28",
    "openai>=1.95.1",
    "pandas>=2.3.1",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.14.3",
    "uvicorn[standard]>=0.35.0",
]
